Implementation of clavin client started